--- a/ac-materials.html
+++ b/ac-materials.html
@@ -240,7 +240,8 @@
 			<div class="row d-flex align-items-center">
 				<div class="col-lg-12">
 					<div class="title-ser">
-						<h1> Electrical & AC Materials Supplier in Dubai (Sonapur) <br> Same-Day Delivery  </h1>
+						<h1> Electrical & AC Materials Supplier in Dubai (Sonapur) <br> <span style="color: #e44d26;"> Same-Day Delivery
+							</span>   </h1>
 					<p>
 				From switch gears to cables, AC parts to lighting, YNM keeps Dubai’s projects powered and cooled. With our Best Value Guarantee, same-day delivery, <br> and retail-to-wholesale options, we’re the partner you can depend on for uninterrupted progress.
 					</p>
