--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 				<div class="row align-items-center">
 					<div class="col-lg-6 col-md-12">
 						<div class="sero-content">
-							<h4>100% Satisfaction Gaurenty</h4>
+							<h4>100% Satisfaction guarantee</h4>
 							<h1> Dubai Builds  <span>Fast.</span> </h1>
 							<h1> We Supply <span>Faster</span> . </h1>
 							<p class="hero-desc">Reliable building, electrical, plumbing, and hardware supplies — delivered same day across Dubai.</p>
