--- a/paints.html
+++ b/paints.html
@@ -236,7 +236,8 @@
 			<div class="row d-flex align-items-center">
 				<div class="col-lg-12">
 					<div class="title-ser">
-						<h1> BPaints & Finishes Supplier in Dubai <br> (Sonapur) — Same-Day Delivery | YNM </h1>
+						<h1> BPaints & Finishes Supplier in Dubai <br> (Sonapur) — <span style="color: #e44d26;"> Same-Day Delivery
+							</span>  | YNM </h1>
 					<p>
 					From residential walls to industrial projects, YNM supplies high-quality paints, coatings, and finishing accessories that protect and beautify. With same-day Dubai delivery, a Best Value Guarantee, and flexible retail-to-wholesale supply, we help every project achieve a professional finish.
 					</p>
