--- a/plumbing-materials.html
+++ b/plumbing-materials.html
@@ -238,7 +238,8 @@
 			<div class="row d-flex align-items-center">
 				<div class="col-lg-12">
 					<div class="title-ser">
-						<h1> Plumbing & Sanitary Materials Supplier in Dubai <br> (Sonapur) — Same-Day Delivery  </h1>
+						<h1> Plumbing & Sanitary Materials Supplier in Dubai <br> (Sonapur) — <span style="color: #e44d26;"> Same-Day Delivery
+							</span>   </h1>
 					<p>
 					From water pumps to sanitary fittings, pipes to heaters — YNM provides the essential materials <br> that keep Dubai’s homes, offices, and projects running smoothly.
 					</p>
