--- a/cleaning-materials.html
+++ b/cleaning-materials.html
@@ -236,7 +236,8 @@
 			<div class="row d-flex align-items-center">
 				<div class="col-lg-12">
 					<div class="title-ser">
-						<h1> Cleaning Materials Supplier in Dubai <br> (Sonapur) — Same-Day Delivery | YNM </h1>
+						<h1> Cleaning Materials Supplier in Dubai <br> (Sonapur) — <span style="color: #e44d26;"> Same-Day Delivery
+							</span>  | YNM </h1>
 					<p>
 	                From garbage bags to cleaning chemicals, dustbins to gloves, YNM supplies durable, reliable <br> cleaning materials that keep homes, offices, and construction sites spotless. 
 					</p>
@@ -451,7 +452,7 @@ We stock cleaning products from reliable brands known for durability, safety, an
 				<div class="col-lg-2 col-md-6">
 					<div class="choose-us-single-box">
 						<div class="choose-icon">
-							<img src="assets/images/BuildingMaterial/Fastdelivery.svg" alt="">
+							<img class="c-icons" src="assets/images/BuildingMaterial/Fastdelivery.svg" alt="">
 						</div>
 						<div class="choose-us-content">
 							<h3 class="choose-title">Fast delivery</h3>
@@ -463,7 +464,7 @@ We stock cleaning products from reliable brands known for durability, safety, an
 				<div class="col-lg-2 col-md-6">
 					<div class="choose-us-single-box">
 						<div class="choose-icon">
-							<img src="assets/images/BuildingMaterial/Outsidedubai.svg" alt="">
+							<img class="c-icons" src="assets/images/BuildingMaterial/Outsidedubai.svg" alt="">
 						</div>
 						<div class="choose-us-content">
 							<h3 class="choose-title">Outside Dubai</h3>
@@ -475,7 +476,7 @@ We stock cleaning products from reliable brands known for durability, safety, an
 				<div class="col-lg-2 col-md-6">
 					<div class="choose-us-single-box">
 						<div class="choose-icon">
-							<img src="assets/images/BuildingMaterial/Payments.svg" alt="">
+							<img class="c-icons" src="assets/images/BuildingMaterial/Payments.svg" alt="">
 						</div>
 						<div class="choose-us-content">
 							<h3 class="choose-title">Payments</h3>
@@ -487,7 +488,7 @@ We stock cleaning products from reliable brands known for durability, safety, an
 				<div class="col-lg-2 col-md-6">
 					<div class="choose-us-single-box">
 						<div class="choose-icon">
-							<img src="assets/images/BuildingMaterial/ForContractors.svg" alt="">
+							<img class="c-icons" src="assets/images/BuildingMaterial/ForContractors.svg" alt="">
 						</div>
 						<div class="choose-us-content">
 							<h3 class="choose-title">For Contractors & Businesses</h3>
@@ -499,7 +500,7 @@ We stock cleaning products from reliable brands known for durability, safety, an
 							<div class="col-lg-2 col-md-6">
 					<div class="choose-us-single-box">
 						<div class="choose-icon">
-							<img src="assets/images/BuildingMaterial/Bestvalue.svg" alt="">
+							<img class="c-icons" src="assets/images/BuildingMaterial/Bestvalue.svg" alt="">
 						</div>
 						<div class="choose-us-content">
 							<h3 class="choose-title">Best Value Guarantee</h3>
@@ -520,32 +521,7 @@ We stock cleaning products from reliable brands known for durability, safety, an
 	<!-- Start hendrio About Section  -->
 	<!--==================================================-->
 
-	<div class="about-section">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-lg-6 col-md-12">
-					<div class="about-right-thumb">
-						<img src="assets/images/resource/about.png" alt="">
-						<div class="about-counter">
-							<h2 class="counter">11</h2>
-							<h2 class="counter1">K <span>+</span></h2>
-							<span class="counter-text">Project <br> Done</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6 col-md-12">
-					<div class="hendrio-section-title">
-					
 
-                      
-					</div>
-			
-			
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!--==================================================-->
 	<!-- End hendrio About Section  -->
