uploading entire project

--- a/about-us.html
+++ b/about-us.html
@@ -78,6 +78,10 @@
       transform: translateY(-6px);
       box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
+	.fw-bold {
+    font-weight: 700 !important;
+    text-transform: uppercase;
+}
   </style>
 </head>
 <body>
@@ -222,8 +226,8 @@
     <div class="hero-content">
       <h1 class="display-5 fw-bold">Your Trusted Building Materials Supplier in Dubai (Sonapur)</h1>
       <p class="lead mt-3 mb-4">At YNM, we believe building is more than concrete and steel — it’s about creating homes, workplaces, and communities. That’s why we supply reliable building, electrical, plumbing, sanitary, paint, and cleaning materials across Dubai with honesty, speed, and care.</p>
-      <a href="https://wa.me/971000000000" class="btn btn-success btn-lg me-2">Order on WhatsApp</a>
-      <a href="#contact" class="btn btn-outline-light btn-lg">Request Call Back</a>
+      <a href="https://wa.me/971000000000" class="about-btn">Order on WhatsApp</a>
+      <a href="#contact" class="about-btn-black">Request Call Back</a>
     </div>
   </section>
 
